fix: reset trip card styles because they were not responsive

--- a/src/client/styles/tripCard.scss
+++ b/src/client/styles/tripCard.scss
@@ -14,62 +14,46 @@
     color: royalblue;
 }
 
-.trip-title {
-    grid-column: 1 / span 2;
-    grid-row: 1;
+.trip-card {
+    display: flex;
+    flex-direction: column;
+    background-color: colors.$morning-blue;
+    padding: 10px;
 }
 
 .depart-date {
-    grid-column: 1;
-    grid-row: 2
+    p {
+        margin: 0;
+    }
 }
 
 .weather-info {
-    grid-column: 1 / span 2;
-    grid-row: 3;
-    display: grid;
-    grid-template-columns: 50% auto;
-    grid-template-rows: 75% auto;
-    margin: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .weather-descr {
-    grid-column: 1;
-    grid-row: 2;
-    margin: 5px 0;
-    justify-self: left;
-}
-
-.avg-temps {
-    grid-column: 1;
-    grid-row: 1;
-    margin: 5px 0;
+    margin: unset;
 }
 
 .weather-icon {
-    grid-column: 2;
-    grid-row: 2;
-    width: 20%;
-    align-self: center;
+    max-width: 60px;
+    align-self: flex-start;
 }
 
 .trip-pic {
-    grid-column: 1 / span 2;
-    grid-row: 4;
-    width: inherit;
-    min-height: 200px;
     background-size: cover !important;
+    width: 100%;
+    height: 200px;
+    padding: unset;
+    margin: unset;
 }
 
 .save-button, .delete-button {
     font-family: vari.$serif;
-    grid-row: 5;
-    margin: 5px;
-    margin: 10px;
-    min-height: 30px;
-    width: auto;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
     border: 1px solid colors.$independence;
+    margin-top: 3px;
 
     &:hover {
         box-shadow: 0 0 6px rgba(35, 173, 278, 1);
@@ -77,59 +61,20 @@
 }
 
 .save-button {
-    grid-column: 1;
-    background-color: colors.$apricot;
 }
 
 .delete-button {
-    grid-column: 2;
     background-color: crimson;
     color: colors.$cultured;
 }
 
-.trip-card {
-    display: grid;
-    grid-template-columns: 50% auto;
-    grid-template-rows: repeat(4, 25%);
-    background-color: colors.$morning-blue;
 
-    padding: 20px;
-    margin: 20px 0;
+
+@media screen and (min-width: 300px) {
 }
 
 @media screen and (min-width: 470px) {
-    .trip-card {
-        display: grid;
-        grid-template-columns: 50% auto;
-        grid-template-rows: 10% 45% auto;
-    }
-    
-    .trip-pic {
-        grid-column: 2;
-        grid-row: 1 / span 3;
-    }
-        
-    .trip-title {
-        grid-column: 1;
-        grid-row: 1;
-    }
-
-    .depart-date {
-        grid-column: 1;
-        grid-row: 2;
-        align-self: center;
-    }
-
-    .weather-info {
-        grid-column: 1;
-        grid-row: 3;
-        margin: initial;
-        margin-bottom: 30px;
-    }
 }
 
 @media screen and (min-width: 1366px) {
-    .trip-card {
-        height: 300px;
-    }
 }
